code-samples/example-15-kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex15-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex15-app
  template:
    metadata:
      labels:
        app: ex15-app
    spec:
      containers:
      - name: ex15-container
        image: nginxinc/nginx-unprivileged:stable-alpine
        ports:
        - name: http-default 
          containerPort: 8080
        volumeMounts:
        - name: wwwdata-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: wwwdata-volume
        configMap:
          name: ex15-wwwdata  # generated by Kustomize
