code-samples/example-15-kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex15-service
spec:
  selector:
    app: ex15-app
  ports:
    - name: web
      port: 80
      targetPort: http-default
